--- a/2021-04-08-weatherApp/style.css
+++ b/2021-04-08-weatherApp/style.css
@@ -7,7 +7,9 @@
 body{
     position: relative;
     height: 100vh;
-    background: linear-gradient(rgb(47,150,163), rgb(48,62,143));
+    background-image: url(https://cdn.pixabay.com/photo/2015/08/30/11/16/sunset-914148_960_720.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
     font-family: sans-serif;
     color: #fff;
 }
@@ -15,14 +17,10 @@ body{
 .app-wrap{
     display: flex;
     flex-direction: column;
-    width: 500px;
-    max-width: 100vw;
-    height: 800px;
     max-height: 100vh;
     position: absolute;
     top: 0; left: 0; bottom: 0; right: 0; margin: auto;
     background: linear-gradient(to bottom, rgb(0,0,0,0.3), rgb(0,0,0,0.6));
-    border-radius: 40px;
 }
 
 header{
@@ -34,7 +32,7 @@ header{
 
 header input{
     width: 100%;
-    max-width: 200px;
+    max-width: 18rem;
     padding: 10px 15px;
     border: none;
     outline: none;
